--- a/pom.xml
+++ b/pom.xml
@@ -1,61 +1,104 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mt</groupId>
-    <artifactId>my-test-app</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>wordsearch</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>My-test-app</name>
-    <url>http://www.example.com</url>
+    <name>WordSearch</name>
+    <url>http://maven.apache.org</url>
 
-    <organization>
-             <name>Richard Osei-Annor>
-    </organization>
-
-    <description>Alphabet Soup Code</description>
-
-    <scm>
-        <connection>scm:git:https://github.com/richardannor/alphabet_soup_project.git</connection>
-        <developerConnection>scm:git:https://github.com/richardannor/alphabet_soup_project.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/richardannor/alphabet_soup_project.git</url>
-    </scm>
+    <properties>
+        <!-- Specify Java version -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <file.encoding>UTF-8</file.encoding>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>3.8.1</version>
+                <scope>test</scope>
         </dependency>
-        <!-- Add more dependencies as needed -->
+
+        <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+                <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.9.5</version>
+                <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
+            <finalName>test</finalName>
+
+        <!--resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <encoding>UTF-8</encoding>  < Explicitly set encoding here >
+            </resource>
+        </resources-->
+
         <plugins>
-            <plugin>
-                  <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                  <archive>
-                    <manifest>
-                      <addClassoatg>true</addClasspath>
-                        <classpathPrefix>lib</classpathPrefix>
-                        <mainClass>com.mt.sample.Test</mainClass>
-                    </manifest>
-                  </archive>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
-                </configuration>
-            </plugin>
-            <!-- Add more plugins as needed -->
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.3</version>
+                                <configuration>
+                                        <includes>
+                                                 <include>**/*.class</include>
+                                        </includes>
+                                </configuration>
+                </plugin>
+
+                <plugin>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>9.2.11.v20150529</version>
+                        <configuration>
+                                <scanIntervalSeconds>10</scanIntervalSeconds>
+                                        <webApp>
+                                                <contextPath>/maven-web-application</contextPath>
+                                        </webApp>
+                        </configuration>
+                </plugin>
+
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-eclipse-plugin</artifactId>
+                        <version>2.9</version>
+                        <configuration>
+                                <downloadSources>true</downloadSources>
+                                <downloadJavadocs>true</downloadJavadocs>
+                                <wtpversion>2.0</wtpversion>
+                                <wtpContextName>maven-web-application</wtpContextName>
+                        </configuration>
+                </plugin>
+
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.3.1</version>
+                        <configuration>
+                                <encoding>UTF-8</encoding>  <!-- Force UTF-8 encoding here -->
+                        </configuration>
+                </plugin>
+
         </plugins>
-    </build>
-         
+</build>
+
 </project>
